# combinatorics

./: CMakeLists.txt
lw1_1/: main.cpp
lw1_1/input/: amount.txt  distance.txt
lw1_2/: main.cpp
lw1_2/input/: workers
lw2/: CMakeLists.txt  main.cpp
lw2/Graph/: Graph.cpp  Graph.h  test.cpp
lw2/input/: input1
lw3/: CMakeLists.txt  main.cpp
lw3/Model/: Graph.cpp  Graph.h
lw3/data/: eight.tgf  k5.tgf  sand.tgf  square.tgf  three-graf.tgf  two.tgf
